// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LCD Client queries for a candidate 1`] = `
Array [
  Array [
    "http://localhost:8998/stake/validators/abc",
    undefined,
  ],
]
`;

exports[`LCD Client queries for a delegation summary for a delegator 1`] = `
Array [
  Array [
    "http://localhost:8998/stake/delegators/abc",
    undefined,
  ],
]
`;

exports[`LCD Client queries for a delegation txs 1`] = `
Array [
  Array [
    "http://localhost:8998/stake/delegators/abc/txs",
    undefined,
  ],
  Array [
    "http://localhost:8998/stake/delegators/abc/txs?type=bonding",
    undefined,
  ],
  Array [
    "http://localhost:8998/stake/delegators/abc/txs?type=unbonding",
    undefined,
  ],
]
`;

exports[`LCD Client queries for shares for a validator and delegate 1`] = `
Array [
  Array [
    "http://localhost:8998/stake/delegators/abc/delegations/efg",
    undefined,
  ],
]
`;

exports[`LCD Client queries for undelegations between a delegator and a validator 1`] = `
Array [
  Array [
    "http://localhost:8998/stake/delegators/abc/unbonding_delegations/def",
    undefined,
  ],
]
`;
